apex-mdapi/src/objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmitLabel__c</fullName>
        <defaultValue>&apos;Conferma&apos;</defaultValue>
        <label>Submit Label</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuccessMessage__c</fullName>
        <defaultValue>&apos;Grazie per aver compilato il form.&apos;</defaultValue>
        <label>Success Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>